# nitt

./: .env.local  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt  services.py
app/: main.py  middlewares.py  services.py
app/host_data/: host_requests.db  hosts.json
app/static/: index.css
app/templates/: index.html
host_data/: host_requests.db
