[tool.poetry]
name = "nitt"
version = "0.1.0"
description = ""
authors = ["Andy Idiaghe <andy.idiaghe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
mypy = "^1.10.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[tool.ruff]
#line-length = 79
#ignore = ["D203"]
#show-source = true
